<resources>
    <string name="app_name">NoteAppGrown</string>
    <string name="notepadFree">Notepad Free</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="notes">Notes</string>
    <string name="categories">Categories</string>
    <string name="edit_categories">Edit categories</string>
    <string name="backup">Backup</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="search">Search</string>
    <string name="sort">SORT</string>
    <string name="select_all_notes">Select all notes</string>
    <string name="import_text_files">Import text files</string>
    <string name="export_notes_to_text_files">Export notes to text files</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_category_name">New category name</string>
    <string name="add">ADD</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="str_edit_categories">Edit categories</string>
    <string name="select_an_action_for_the_note">Select an action for the note:</string>
    <string name="undelete">Undelete</string>
    <string name="delete">Delete</string>
    <string name="untitled">Untitled</string>
    <string name="last_edit">"Last edit: "</string>
    <string name="created">"Created: "</string>
    <string name="edit_category_name">Edit category name</string>
    <string name="select_color">Select color</string>
    <string name="remove_the_color">REMOVE THE COLOR</string>
    <string name="select_all">Select All</string>
    <string name="colorize">Colorize</string>
    <string name="categorize">Categorize</string>
    <string name="restore">Restore</string>
    <string name="undelete_all">Undelete all</string>
    <string name="empty_trash">Empty trash</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="undo_all">Undo all</string>
    <string name="share">Share</string>
    <string name="export_text_a_file">Export text a file</string>
    <string name="switch_to_read_mode">Switch to read mode</string>
    <string name="print">Print</string>
    <string name="show_formatting_bar">Show formatting bar</string>
    <string name="show_info">Show info</string>
    <string name="set_default_18">SET DEFAULT (18)</string>
</resources>