<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Save"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/Undo"
        android:title="@string/undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/Redo"
        android:title="@string/redo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/undo_all"
        android:title="@string/undo_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Share"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/export_text_a_file"
        android:title="@string/export_text_a_file"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/search_note"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="never"/>
    <item
        android:id="@+id/categorize_note"
        android:title="@string/categorize"/>
    <item
        android:id="@+id/Colorize"
        android:title="@string/colorize"
        app:showAsAction="never"/>
    <item
        android:id="@+id/switch_to_read_mode"
        android:title="@string/switch_to_read_mode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/print"
        android:title="@string/print"
        app:showAsAction="never"/>
    <item
        android:id="@+id/show_formatting_bar"
        android:title="@string/show_formatting_bar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/showInfo"
        android:title="@string/show_info"
        app:showAsAction="never"/>
</menu>