<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_note_24"
            android:title="@string/notes"/>
    </group>
    <item
        android:id="@+id/categories"
        android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/nav_edit_categories"
                android:icon="@drawable/ic_edit_categories_24"
                android:title="@string/edit_categories"/>
        </menu>
    </item>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup_24"
            android:title="@string/backup"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash_24"
            android:title="@string/trash"/>
    </group>
    <group android:id="@+id/group3">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_rate_the_app"
            android:icon="@drawable/ic_rate_24"
            android:title="@string/rate_the_app"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_24"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_policy_24"
            android:title="@string/privacy_policy"/>
    </group>
</menu>