<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/selectAll"
        android:icon="@drawable/ic_select_all_24"
        android:title="@string/delete"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_trash_24"
        android:iconTint="@color/white"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/export_notes_to_text_file"
        android:icon="@drawable/ic_more_24"
        android:title="@string/export_notes_to_text_files"
        app:showAsAction="never"/>
    <item
        android:id="@+id/categorize"
        android:title="@string/categorize"
        android:contentDescription="@string/categorize"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Colorize"
        android:title="@string/colorize"
        app:showAsAction="never"/>
</menu>