<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/select_all_notes"
        android:icon="@drawable/ic_more_24"
        android:title="@string/select_all_notes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/import_text_file"
        android:icon="@drawable/ic_more_24"
        android:title="@string/import_text_files"
        app:showAsAction="never"/>
    <item
        android:id="@+id/export_notes_to_text_file"
        android:icon="@drawable/ic_more_24"
        android:title="@string/export_notes_to_text_files"
        app:showAsAction="never"/>
</menu>