<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp">
    <TextView
        android:id="@+id/trashTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/trashContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/brownEarth"
        android:alpha="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_an_action_for_the_note"
        android:layout_marginLeft="@dimen/_8sdp"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"/>
    <RadioGroup
        android:id="@+id/actionRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_8sdp">
        <RadioButton
            android:id="@+id/rbUndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undelete"/>
        <RadioButton
            android:id="@+id/rbDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </RadioGroup>
</LinearLayout>